--- a/static/style.css
+++ b/static/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 .logo {
-    font-size: 1.75rem;
+    font-size: 1.40rem;
     font-weight: 700;
     color: #222;
     text-decoration: none;
@@ -147,7 +147,7 @@ main, section {
 }
 
 .folio-gallery a img {
-    width: 300px;
+    width: 280px;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.15);
     transition: transform 0.3s ease;
@@ -242,6 +242,12 @@ main, section {
 /* -------------------------------
    About Page
 --------------------------------*/
+.about-container {
+    max-width: 1000px;
+    margin: 60px auto;
+    padding: 0 24px;
+}
+
 .about-text {
     text-align: center;
 }
