--- a/static/style.css
+++ b/static/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 .logo {
-    font-size: 1.40rem;
+    font-size: 100%;
     font-weight: 700;
     color: #222;
     text-decoration: none;
@@ -42,7 +42,7 @@ body {
 .navbar a {
     position: relative;
     margin-left: 40px;
-    font-size: 1.125rem;
+    font-size: 100%;
     font-weight: 500;
     color: #444;
     text-decoration: none;
@@ -101,7 +101,7 @@ main, section {
    Portfolio Year
 --------------------------------*/
 .folio-year {
-    max-width: 1000px;
+    max-width: 100%;
     margin: 60px auto -100px;
     text-align: center;
 }
