--- a/static/style.css
+++ b/static/style.css
@@ -119,19 +119,17 @@ main, section {
     content: "";
     position: absolute;
     top: 50%;
-    width: 400px;
+    width: 100%;
     height: 2px;
     background: #ccc;
 }
 
 .folio-year h2::before {
     right: 100%;
-    margin-right: 15px;
 }
 
 .folio-year h2::after {
     left: 100%;
-    margin-left: 15px;
 }
 
 /* -------------------------------
